index.html ver 0.2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar">
-        <h1 class="logo-logo">Business LOGO</h1>
+       <img class="logo" src="hospital-logo.png">
        <div class="nav-content">
         
             <ul class="nav-links">
